# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  superlinter.yml  tests.yml
.github/workflows/gendiff/scripts/: gendiff.py
gendiff/: __init__.py  cli.py  engine.py  parser.py  parsing.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_json.py  test_yaml.py
